--- a/vignettes/Hiiragi2013.Rnw
+++ b/vignettes/Hiiragi2013.Rnw
@@ -48,11 +48,10 @@ BiocStyle::latex(short.fignames=TRUE, use.unsrturl=FALSE)
 
 \begin{document}
 
-\title{{\Large Executable Analysis Document Supporting:}\\
+\bioctitle[Analysis report: Ohnishi et al., 2013]{{\Large Executable Analysis Document Supporting:}\\
   \textbf{Cell-to-cell expression variability followed by signal reinforcement progressively segregates early mouse lineages}\\
   {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej K.~Ole\'s, Marcos J.~Ara\'uzo-Bravo, Mitinori Saitou, Anna-Katerina Hadjantonakis and Takashi Hiiragi\\\href{http://dx.doi.org/10.1038/ncb2881}{doi:10.1038/ncb2881}}}
 
-\renewcommand{\thetitle}{Analysis report: Ohnishi et al., 2013} % short title used in headers
 \author{Authors of this document: Andrzej K.~Ole\'s, Wolfgang Huber}
 
 \maketitle
